postmessage module, first commits

--- a/src/gallery-postmessage/build.properties
+++ b/src/gallery-postmessage/build.properties
@@ -17,7 +17,7 @@ component=gallery-postmessage
 component.jsfiles=postmessage.js
  
 # The list of modules this component requires. Used to set up the Y.add module call for YUI 3.
-component.requires=event-custom, history-hash
+component.requires=event-synthetic, history-hash, json
  
 # The list of modules this component supersedes. Used to set up the Y.add module call for YUI 3.
 component.supersedes=
